Bug 749097 - Allow to search for ( and ) characters in addressbook cards by urlencoding them in the search query. r=Neil, r=mconley