suite/mailnews/addrbook/addressbook.js
@@ -364,7 +364,7 @@ function onEnterInSearchBar()
   if (gSearchInput.value != "") {
     // replace all instances of @V with the escaped version
     // of what the user typed in the quick search text input
-    searchURI += gQueryURIFormat.replace(/@V/g, encodeURIComponent(gSearchInput.value));
+    searchURI += gQueryURIFormat.replace(/@V/g, encodeABTermValue(gSearchInput.value));
   }
 
   SetAbView(searchURI);
